Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjNumObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Boolean var)
    end
end
